web/themes/contrib/bootstrap5/css/niv.css
*{ box-sizing: border-box;}
body{background-color:#eaeaea;}
.blue_bg {
  background: url(images/login_bg.jpg);
    background-size: auto;
  background-size: cover;
}
.region-content {
    padding: 0 0.5rem;
    margin: 100px 10px !important;
}
.region-sidebar-first{
 padding: 0 0.5rem;
    margin: 100px 0 !important;
}

.view-header  {
	float:right;
}
.profile-data-container{
	float:right !important;
	margin-top:30px;
}
.profile-img{
	border-radius:50% !important;
	height:150px;

}

/*custom css here */
#block-niv-content 
.js-webform-type-fieldset .fieldset-legend{font-size: 26px;color: #051E61;
  font-weight: 700;}
  .js-webform-type-fieldset .radios--wrapper .fieldset-legend{font-size:16px;
    font-weight: 500;}
.webform-container .card-header{color:#051E61;font-weight: 700;}
.webform-container legend{display: none;}
.webform-container .webform-element label{margin-right:15px;font-weight: 400;color: #000;}
.webform-container .webform-element label::after{content:' :';}
.webform-container .webform-element{font-weight: 600;color:#006400;}

#edit-submit{background-color: #13388e;}
footer.footer-dark{padding: 1.5rem 0;background: #ffffff !important;}
h4.label.js-form-required.form-required{font-weight:normal;}
/* .webform-button--draft{   float: left; font-size: 14px;background-color: #198754;    border-color: #198754;}
.webform-button--draft:hover{    color: #fff;
  background-color: #157347;
  border-color: #146c43;
} */
.webform-button--draft{float: left;}
.webform-button--next,.webform-button--draft{font-size: 14px;background-color: #13388e;}
.webform-button--previous{    font-size: 14px;
  background-color: #3f51b5;
  border-color: #3f51b5;}
  .webform-button--previous:hover{background-color:#3f51b5;
    border-color:#3f51b5;}
.user-logged-in.path-assessment #edit-actions{width:100%;}
.col-md-2.text-center span.d-block{background-color: #13388e;cursor: pointer;
  padding: 20px 10px;
  border-radius: 5px;}
  .col-md-2.text-center span.d-block:hover{box-shadow: 4px 7px 4px 0px rgba(0,0,0,0.2);}
.col-md-2.text-center span.d-block > a{color: #ffffff;
  text-decoration: none;
  line-height: 0;
  font-size: 18px;
  font-weight: 500;
  text-transform: uppercase;}
.form-item, .form-actions{margin:0 !important;}
.js-form-item.form-item {margin-bottom:15px !important;}
#edit-actions.form-actions{margin-top:20px !important}
.form-leftSide{font-size: 2.5rem;
  font-weight: 800;
  color: #ffffff;
  text-align: center;padding: 10%;
  display: flex;
  align-items: center;
  justify-content: center;}
.form-rightSide{    background-color: #ffffff;
  height: 100%;
  min-height: 350px;
  padding: 3rem!important;}
#block-niv-content.block-system-main-block{border-radius: 5px;
  overflow: hidden;
}

.path-frontpage #block-niv-content.block-system-main-block,
.path-user #block-niv-content.block-system-main-block{box-shadow:1px 0px 10px 4px rgba(0,0,0,0.2);}
.path-frontpage .region-content,.path-user .region-content{margin:100px 140px !important;}
.user-logged-in.path-user .region-content{margin:100px 10px !important}
 .user-logged-in.path-user #block-niv-content.block-system-main-block{box-shadow:none;} 
  /* box-shadow: 4px 7px 4px 0px rgba(0,0,0,0.2);   */
header .navbar-expand-lg.bg-dark{background-color: #13388e!important;}
form.user-pass{padding: 40px 60px;max-width: 80%;
  margin: 0 auto;}
form.user-pass #edit-actions.form-actions{    width: 100%;text-align: center;}
/* navigation css here */
/* #block-nivadminmenu .navbar-nav .nav-link,
#block-test .navbar-nav .nav-link{background-color: #13388e;
  margin-bottom: 5px;
  color: #ffffff;
  padding:8px 10px;}
  #block-nivadminmenu .navbar-nav .nav-link:hover,
  #block-test .navbar-nav .nav-link:hover,
  #block-test .navbar-nav .nav-link.active{background-color: #3f51b5;border-radius: 3px;;} */
.disabled{opacity:0.4;}
.disabled:hover{box-shadow: none !important; cursor: none !important;}
.disabled:hover > a{cursor: none !important;}
  .region-sidebar-first .navbar-nav .nav-link{background-color: #13388e;
    margin-bottom: 5px;
    color: #ffffff;
    padding:8px 10px;border-radius: 3px;}
    .region-sidebar-first .navbar-nav .nav-link:hover,
    .region-sidebar-first .navbar-nav .nav-link.active{background-color: #3f51b5;;}
  .view-header > a{background-color: #13388e;
    color: #ffffff;
    text-decoration: none;
    padding: 5px 11px;
    margin: 0 10px;}
  
  .view-content .table > thead > tr{background-color:#cfe2ff;}
  .view-header{margin-bottom:20px;}
  .layout .form-wrapper{width: 46%;
    float: left;
    margin: 0 1%;}
  
  .js-form-type-date > input{display: block;
    width: 100%;
    padding: 0.375rem 0.75rem;
    font-size: 1rem;
    font-weight: 400;
    line-height: 1.5;
    color: #212529;
    background-color: #fff;
    background-clip: padding-box;
    border: 1px solid #ced4da;
    appearance: none;
    border-radius: 0.375rem;
    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;}
    .form-type-date{width: 100%;}
.form-actions {
      text-align: right;
      display: inline-block;
      width: 48%;
  }
  .profile .block-layout-builder,.node__content .field--label-above{width:25%;
    float: left;
    margin: 0 1%;}
    
.form-rightSide .form-actions{width: 100%;
  margin: 0 8px;text-align: left;}
.form-rightSide label{margin-bottom:5px;}
  .form-rightSide .layout .form-wrapper{width: 95%;}
  #edit-account.js-form-wrapper.form-wrapper{width: 95%;}
  #edit-account .form-item-mail,#edit-account .password-parent,#edit-account .confirm-parent,#edit-pass--description.description{width: 46%;
    float: left;
    margin: 0 1%;}
    #edit-pass--description.description{display: none;}
    #edit-field-organization-wrapper{    margin: 0 2%;}
    .user-register-form.user-form .form-actions{text-align: left;
      width: 100%;
      margin: 20px 2%;}
    
      .form-rightSide #edit-account .form-item-mail, 
      .form-rightSide #edit-account .password-parent, 
      .form-rightSide #edit-account .confirm-parent, 
      .form-rightSide #edit-pass--description.description{width: 100%;}

      .row.registration-links a{text-decoration: none;
        background: #13388e;
        padding: 4px 30px;
        font-size:14px;
        color: #ffffff;
    border-radius:5px;
    }
    /*test */
    .row.registration-links a.active{background: #3f51b5;}
    .row.registration-links{text-align: center;
      display: inline-flex;
      margin: 0 20%;}



      @media only screen and (max-width: 900px) {
        .path-user .region-content{margin:0 !important;}
      }
	  
/** Temporary need to fix**/  
#edit-mail--description,.site-title {
display:none !important;
}
header .navbar-expand-lg.bg-dark {
	background-color:rgb(5, 30, 97) !important;
}
.webform-submission-information.card {
	display:none;
}

.path-nivadmin .dashboard .d-block {
  display: block !important;
  background-color: #3f51b5;
  padding: 50px;
  border-radius: 15px;
  
}
.path-nivadmin .dashboard .d-block a {
  
  color: #FFF;
  font-size: larger;
  font-weight: bold;
  text-decoration: none;
  
  
}

.page-node-type-profile .form-radios .form-type-radio{
  float:left;
  margin-right: 20px !important;
}

.profile-suggestions-form legend {

  text-align: left;
}


	

